--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -16,6 +16,12 @@
     .card {
         box-shadow: 0 16px 48px #E3E7EB;
     }
+
+
+    .site-heading h3
+    {
+        text-align: center;
+    }
 </style>
 
 <header class="masthead">
@@ -24,9 +30,8 @@
         <div class="row">
             <div class=" col-md-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h3 class=" site-heading my-4 mt-3 text-white"> Welcome to my awesome Blog </h3>
-                    <p class="text-light">We Love Django As much as you do..! &nbsp
-                    </p>
+                    <h3 class="site-heading my-4 mt-3 text-white"> This is a banner section. </h3>
+                    
                 </div>
             </div>
         </div>
