--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -26,7 +26,7 @@
             border-color: #dc281e;
         }
         .masthead {
-            background: #3398E1;
+            background: #eb0505;
             height: auto;
             padding-bottom: 15px;
             box-shadow: 0 16px 48px #E3E7EB;
