--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -16,7 +16,7 @@
     <div class="about-section" >
 <div class="about-one">
 <h2>who we are</h2>
-<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+<P>ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
     molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
     numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
     optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
