--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -14,6 +14,9 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     </head>
@@ -25,14 +28,17 @@
 <div class="navbar">
   <ul>
     <li><a href="{% url 'home' %}" class="active">Home </a> </li>
-    <li><a href="#about">About</a></li>
-      {% for cats in cat_title %}
+{% for page in newpages %}
+    <li><a href="{% url 'mypage' page.slug    %}">{{page}}</a></li>
+
+{% endfor %}
+      <!-- {% for cats in cat_title %}
     <li>
                            
             <a  href="{% url 'post_category' cats %}">{{cats}}</a>
                        
                         </li>
-     {% endfor %}
+     {% endfor %} -->
     <li><a href="#our-services">services</a></li>
     <li><a href="#contact">contact</a></li>
   
@@ -52,11 +58,12 @@
 
 
   </ul>
-
   <div class="icon" onclick="openNav()">
     <i class="fa fa-bars"></i>
   </div>
+  
 </div>
+
 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -130,13 +137,16 @@
         <footer class="py-3 bg-grey">
 
           <div class="copyright">
-            <p class="m-0  text-center ">Copyright 2023 &copy; HBK and associates</p>
+            <p class="m-0  text-center ">Copyright 2023 &copy; Axis infotech </p>
             </div>
         </footer>
        
 
 </div>
 <script src="{%  static 'js/main.js' %}"></script>
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+
 <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -148,6 +158,50 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ 
 
+
+<script>
+       if ($(".text-slider").length == 1) {
+             
+             var typed_strings =
+                 $(".text-slider-items").text();
+  
+             var typed = new Typed(".text-slider", {
+                 strings: typed_strings.split(", "),
+                 typeSpeed: 100,
+                 loop: true,
+                 backDelay: 900,
+                 backSpeed: 100,
+             });
+         }
+
+
+         AOS.init();
+
+  $(document).ready(function(){
+    $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    autoplay:true,
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:3
+        },
+        1000:{
+            items:5
+        }
+    }
+})
+  })
+
+
+</script>
     </body>
 </html>
