--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -6,15 +6,22 @@
 {% block content %}
 <div class="banner">
     <img src="{% static 'img/little-dragon-8FON0kYSZV0-unsplash.jpg'   %}"  >
-<div class="banner-text">
-<h1>we are HBK and associates</h1>
+<div class="banner-text" data-aos="fade-up"  data-aos-duration="1500" >
+<h1> <span class="text-slider-items">
+    To forge,facilitate and foster innovative digital solutions
+</span>
+<span class="text-slider">
+
+</span>
+    
+    </h1>
 <a href="#contactform"><p>contact us </p></a>
 </div>
 </div>
 
 <div class="container" id="about">
     <div class="about-section" >
-<div class="about-one">
+<div class="about-one"data-aos="fade-up"  data-aos-duration="1500" >
 <h2>who we are</h2>
 <P>ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
     molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
@@ -25,25 +32,27 @@
     tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
     quia.</P>
 </div>
-<div class="about-two">
+<div class="about-two" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="500" >
     <img src="{% static 'img/little-dragon-8FON0kYSZV0-unsplash.jpg'   %}"  >
 </div>
 
     </div>
+    </div>
+    <div class="our-services">
 <div class="container" id="our-services">
     <h2 class="header">what we do</h2>
     <div class="services-section" >
        
-        <div class="service-one">
+        <div class="service-one"data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="500" >
              <h3>auditing services</h3>
             <img src="{% static 'img/Depositphotos_8078801_S.jpg'   %}"  >
             <div class="overlay"></div>
         </div>
-        <div class="service-two">
+        <div class="service-two" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="1000">
             <h3>taxation</h3>
             <img src="{% static 'img/taxation.jpg' %}"   >
         </div>
-        <div class="service-three">
+        <div class="service-three" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="1500">
             <h3>advisory services</h3>
             <img src="{% static 'img/Advisory-board1.jpg'   %}"  >
         </div>
@@ -52,10 +61,31 @@
   
 </div>
 
+</div>
 
+<div class="our-clients">
+        
+   
+    <div class="owl-carousel owl-theme">
+        <div class="item"><h4>1</h4></div>
+        <div class="item"><h4>2</h4></div>
+        <div class="item"><h4>3</h4></div>
+        <div class="item"><h4>4</h4></div>
+        <div class="item"><h4>5</h4></div>
+        <div class="item"><h4>6</h4></div>
+        <div class="item"><h4>7</h4></div>
+        <div class="item"><h4>8</h4></div>
+        <div class="item"><h4>9</h4></div>
+        <div class="item"><h4>10</h4></div>
+        <div class="item"><h4>11</h4></div>
+        <div class="item"><h4>12</h4></div>
+    </div>
 
     </div>
+
+
 </div>
+
  
     
 
