--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -5,14 +5,16 @@
 
 {% block content %}
 <div class="banner">
-    <img src="{% static 'img/little-dragon-8FON0kYSZV0-unsplash.jpg'   %}"  >
+    <img src="{% static 'img/kern_it_85103537_1920x1080px.jpg'   %}"  >
 <div class="banner-text" data-aos="fade-up"  data-aos-duration="1500" >
 <h1> <span class="text-slider-items">
-    To forge,facilitate and foster innovative digital solutions
-</span>
-<span class="text-slider">
+    Empowering Digital Transformations: InnovateIT Solutions 
+
 
 </span>
+
+<strong class="text-slider"></strong>
+ 
     
     </h1>
 <a href="#contactform"><p>contact us </p></a>
@@ -23,38 +25,42 @@
     <div class="about-section" >
 <div class="about-one"data-aos="fade-up"  data-aos-duration="1500" >
 <h2>who we are</h2>
-<P>ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-    nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-    tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-    quia.</P>
+{% for about in page_one %}
+<P>{{about.content|truncatechars:355 }}</P>
+
+    {% endfor %}
+
+    {% for page in page_one %}
+    <a href="{% url 'mypage' page.slug %}"><h3>read more</h3></a>
+    {% endfor %}
 </div>
 <div class="about-two" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="500" >
-    <img src="{% static 'img/little-dragon-8FON0kYSZV0-unsplash.jpg'   %}"  >
+    <img src="{% static 'img/images (2).jpg'   %}"  >
 </div>
 
     </div>
     </div>
     <div class="our-services">
-<div class="container" id="our-services">
+    <div class="container" id="our-services">
     <h2 class="header">what we do</h2>
     <div class="services-section" >
        
-        <div class="service-one"data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="500" >
-             <h3>auditing services</h3>
-            <img src="{% static 'img/Depositphotos_8078801_S.jpg'   %}"  >
+        <div class="service-one"data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="0" >
+             <h3>web development</h3>
+            <img src="{% static 'img/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg'   %}"  >
             <div class="overlay"></div>
         </div>
         <div class="service-two" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="1000">
-            <h3>taxation</h3>
-            <img src="{% static 'img/taxation.jpg' %}"   >
+            <h3>mobile app development</h3>
+            <img src="{% static 'img/balazs-ketyi-sScmok4Iq1o-unsplash.jpg' %}"   >
         </div>
         <div class="service-three" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="1500">
-            <h3>advisory services</h3>
-            <img src="{% static 'img/Advisory-board1.jpg'   %}"  >
+            <h3>graphics designing</h3>
+            <img src="{% static 'img/emily-bernal-v9vII5gV8Lw-unsplash.jpg'   %}"  >
+        </div>
+        <div class="service-four" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="2000">
+            <h3>digital marketing</h3>
+            <img src="{% static 'img/images (1).jpg'   %}"  >
         </div>
     </div>
 
@@ -63,23 +69,43 @@
 
 </div>
 
-<div class="our-clients">
+<div id="our-clients" class="container">
         
-   
+   <h2>Testimonials</h2>
     <div class="owl-carousel owl-theme">
-        <div class="item"><h4>1</h4></div>
-        <div class="item"><h4>2</h4></div>
-        <div class="item"><h4>3</h4></div>
-        <div class="item"><h4>4</h4></div>
-        <div class="item"><h4>5</h4></div>
-        <div class="item"><h4>6</h4></div>
-        <div class="item"><h4>7</h4></div>
-        <div class="item"><h4>8</h4></div>
-        <div class="item"><h4>9</h4></div>
-        <div class="item"><h4>10</h4></div>
-        <div class="item"><h4>11</h4></div>
-        <div class="item"><h4>12</h4></div>
-    </div>
+      
+        <div class="item">
+            <img src="{% static 'img/user (3).png' %}" >
+
+                <h3>Aakash Basnet</h3>
+                <p>I really liked their service as they are providing high 
+                    quality software products  at a reasonable rate
+                </p>
+        </div>
+        <div class="item">
+            <img src="{% static 'img/user (3).png' %}" >
+            <h3>Binay Thapa</h3>
+            <p>I really liked their service as they are providing high 
+                quality software products  at a reasonable rate
+            </p>
+        </div>
+        <div class="item">
+            <img src="{% static 'img/user (3).png' %}" >
+            <h3>Rojin Shrestha</h3>
+            <p>I really liked their service as they are providing high 
+                quality software products at a reasonable rate
+            </p>
+        </div>
+        <div class="item">
+            <img src="{% static 'img/user (3).png' %}" >
+            <h3>Shristi adhikari</h3>
+            <p>I really liked their service as they are providing high 
+                quality software products  at a reasonable rate
+            </p>
+        </div>
+       
+      
+       
 
     </div>
 
@@ -101,12 +127,12 @@
       <label for="name"> Name</label>
       <input type="text" id="name" name="name" placeholder="Your name..">
   
-      <label for="email">email</label>
+      <label for="email">Email</label>
       <input type="text" id="email" name="email" placeholder="Your email">
   
       
   
-      <label for="message">message</label>
+      <label for="message">Message</label>
       <textarea id="message" name="message" placeholder="Write something.." ></textarea>
   
       <input type="submit" value="Submit">
@@ -121,9 +147,9 @@
     </form>
     </div>
     <div class="contact-details">
-        <p>Phone:</p>
-        <p>Email:</p>
-        <p>Address:</p>
+        <h4><i class=" fa fa-phone-square"></i>Phone</h4>  986-1500432/9849184007
+        <h4><i class="fa fa-envelope" aria-hidden="true"></i>Email</h4> info@axisinfotech.com.np
+        <h4><i class="fa fa-map-marker" aria-hidden="true"></i>Address</Address></h4>Buddhanagar,kathmandu,Nepal
     </div>
   </div>
 </div>
