--- a/templates/post/page.html
+++ b/templates/post/page.html
@@ -5,7 +5,13 @@
 
 
 {% block content %}
+
+<div class="container">
+    <div class="page-body">
+
+    
 <h1>{{page.title}}</h1>
 <p>{{page.content}}</p>
-
+</div>
+</div>
 {% endblock %}
