--- a/templates/post/index.html
+++ b/templates/post/index.html
@@ -44,28 +44,49 @@
     <div class="container" id="our-services">
     <h2 class="header">what we do</h2>
     <div class="services-section" >
-       
-        <div class="service-one"data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="0" >
+        <div class="owl-carousel owl-theme">
+            
+
+        <div class="items">
+        <div class="service-one" id="service-card">
              <h3>web development</h3>
-            <img src="{% static 'img/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg'   %}"  >
-            <div class="overlay"></div>
+            <img src="{% static 'img/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg'   %}"   >
+            
         </div>
-        <div class="service-two" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="1000">
+        </div>
+        <div class="items">
+        <div class="service-two"  id="service-card">
+            <h3>Data proccessing and analytics</h3>
+            <img src="{% static 'img/luke-chesser-JKUTrJ4vK00-unsplash.jpg'   %}"  >
+        </div>
+        </div>
+        <div class="items">
+        <div class="service-three" id="service-card" >
             <h3>mobile app development</h3>
             <img src="{% static 'img/balazs-ketyi-sScmok4Iq1o-unsplash.jpg' %}"   >
         </div>
-        <div class="service-three" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="1500">
+        </div>
+        <div class="items">
+        <div class="service-four" id="service-card" >
             <h3>graphics designing</h3>
             <img src="{% static 'img/emily-bernal-v9vII5gV8Lw-unsplash.jpg'   %}"  >
         </div>
-        <div class="service-four" data-aos="fade-up"  data-aos-duration="1500" data-aos-delay="2000">
+        </div>
+        <div class="items">
+        <div class="service-five" id="service-card">
             <h3>digital marketing</h3>
             <img src="{% static 'img/images (1).jpg'   %}"  >
         </div>
     </div>
+    </div>
 
-  
+  </div>
 </div>
+
+</div>
+
+<div id="banner-aws" class="container
+">
 
 </div>
 
