--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,7 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 17px;
     background-color: #fdfdfd;
+}
+a{
+    text-decoration: none;
+}
+h3
+{
+    font-size: 22px;
+    text-align: center;
+}
+html{
+    scroll-behavior: smooth;
 }
 .shadow {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
@@ -22,4 +36,631 @@ body {
 .bg-light
 {
     background-color: red !important;
+}
+
+
+.head_text {
+    color: white;
+}
+
+.card {
+    box-shadow: 0 16px 48px #E3E7EB;
+}
+
+
+.site-heading h3
+{
+    text-align: center;
+}
+
+
+input[type=text],textarea {
+width: 100%; /* Full width */
+padding: 12px; /* Some padding */ 
+border: 1px solid #ccc; /* Gray border */
+border-radius: 4px; /* Rounded borders */
+box-sizing: border-box; /* Make sure that padding and width stays in place */
+margin-top: 6px; /* Add a top margin */
+margin-bottom: 16px; /* Bottom margin */
+resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+background-color: #04AA6D;
+color: white;
+padding: 12px 20px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+#contactform {
+border-radius: 5px;
+background-color: #f2f2f2;
+padding: 20px;
+display: flex;
+flex-basis: 50%;
+}
+
+#back-to-top
+{
+    width: 20px;
+    height: 20px;
+    background-color: red;
+    bottom: 10px;
+    right: 20px;
+    position: fixed;
+    cursor: pointer;
+    opacity: 0;
+}
+
+#back-to-top:hover 
+{
+    background-color: #04AA6D;
+}
+
+.navbar
+{
+
+    
+    height: 70px;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    position: absolute;
+    position: fixed;
+    justify-content: center;
+}
+
+.navbar ul li a
+{
+    color: #fff;
+
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.navbar ul li
+{
+    display: inline-block;
+    padding: 10px 12px;
+    transition: 0.3s;
+}
+.navbar ul li:hover
+{
+    background-color: #04AA6D;
+}
+
+.banner{
+    position: relative;
+}
+
+
+ .navbar .icon,.overlay
+ {
+    display: none; 
+}
+
+.banner img{
+    height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  width: 100%;
+  filter: brightness(50%);
+
+
+}
+
+.banner-text
+{
+    position: absolute;
+    top: 30%;
+    left: 25%;
+    right: 25%;
+    text-align: center;
+    text-transform: capitalize;
+    color: #fff;
+}
+
+.banner-text p
+{
+    border: 2px solid white;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: white;
+  background :transparent;
+  text-align: center;
+  cursor: pointer;
+  transition: .3s;
+  text-transform: uppercase;
+
+}
+.banner-text p:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+
+.dropdown{
+    position: relative ;
+    color: #fff;
+}
+.dropdown a{
+    color: #fff;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.dropdown-items
+{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    transition: 0.9s;
+    margin-top: 20px;
+}
+.dropdown-items a
+{
+color:black !important;
+padding: 0px 5px;
+text-decoration: none;
+display: block;
+cursor: pointer;
+}
+.dropdown:hover > .dropdown-items
+{
+    display: block;
+   
+}
+ .banner::before
+{
+    width: 65%;
+    left: 0;
+    transform: matrix(1, 0.102, 0, 2, 0, 0);
+    position: absolute;
+    content: '';
+    height: 50px;
+    background: #fff !important;
+    z-index: 2;
+    bottom: -30px;
+} 
+.banner::after
+{
+    width: 35%;
+    right: 0;
+    transform: matrix(1, -0.102, 0, 2, 0, 0);
+    position: absolute;
+    content: '';
+    height: 50px;
+    background: #fff !important;
+    z-index: 2;
+    bottom: -51px;
+} 
+.our-services
+{
+    background-color: #f3f3f3;
+    padding: 40px 0;
+}
+.dropdown i
+{
+    margin-left: 10px;
+}
+.about-section 
+{
+    
+    display: flex;
+    flex-direction: row;
+    column-gap: 50px;
+    margin: 102px 0px 50px 0px; 
+    flex-wrap: wrap;
+    
+}
+.about-section .about-one{
+
+    flex-basis: 37rem;
+}
+.about-one h2::after
+{   content: '';
+    width: 65px;
+    height: 2px;
+    background-color: #04AA6D;
+    position: absolute;
+    left: 0;
+    margin-top: 44px;
+}
+.text-slider-items
+{
+    display: none;
+}
+.about-one h2{
+
+text-transform: uppercase;
+}
+.about-one p{
+    margin-top: 60px;
+    text-align: justify;
+    color:#000;
+    line-height: 1.8;
+}
+.about-one h3
+{
+    border: 2px solid #686161;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    text-align: center;
+    cursor: pointer;
+    transition: .3s;
+    text-transform: uppercase;
+    font-size: 20px
+}
+
+
+
+.about-two
+{
+    display: flex;
+    justify-content: center;
+    flex-basis: 28rem;
+}
+
+.about-two img
+{
+    border-radius: 7px;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+.services-section
+{
+    margin: 60px 0px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-transform: capitalize;
+}
+.services-section h3{
+    font-weight:200;
+    color: #fff;
+    z-index: 999;
+}
+.services-section img
+{
+    filter: brightness(0.5);
+    z-index: 1;
+}
+
+.header{
+    position: relative;
+    text-align: center;
+    text-transform: capitalize;
+}
+.header::after {
+    content: '';
+    width: 65px;
+    height: 2px;
+    background-color: #04AA6D;
+    position: absolute;
+    left: 47%;
+    margin-top: 44px;
+}
+.service-one
+{
+display: flex;
+flex-basis: 250px;
+height: 200px;
+position: relative;
+}
+
+.service-one img
+{
+    width: 250px;
+}
+
+
+.overlay
+{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: red;
+    overflow: hidden;
+    width: 0;
+    height: 100%;
+    transition: .5s ease;
+}
+.service-one:hover .overlay {
+    width: 100%;
+  }
+
+
+.service-one,.service-two,.service-three
+{
+    transition: 0.3s ease-in-out;
+}
+.service-one h3{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-40%, -50%);
+}
+.service-two h3{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-40%, -50%);
+}
+
+.service-three h3{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-40%, -50%);
+}
+.service-four h3
+{
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-40%, -50%);
+}
+.service-two{
+    display: flex;
+    flex-basis: 250px;
+  
+    height: 200px;
+    position: relative;
+    }
+.service-two img
+    {
+width: 250px;
+    }
+
+.service-three img
+{
+    width: 250px;
+}
+
+.service-four{
+            display: flex;
+            flex-basis: 250px;
+          
+            height: 200px;
+            position: relative;
+            }
+
+.service-four img
+            {
+        width: 250px;
+            }
+
+
+.contact-section
+{
+    display: flex;
+    flex-direction: row;
+    gap: 150px;
+    margin: 50px 0px;
+    justify-content: center;
+ 
+}
+.contact-details
+{
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+    padding-top: 69px;
+    gap: 30px;
+    color: #000;
+}
+footer{
+    width: 100%;
+    height: 80vh;
+    background: linear-gradient(to right, #136a8a, #267871);
+    position: relative;
+}
+
+.copyright
+{
+    bottom: 0;
+    position: absolute;
+    left: 25%;
+    right: 25%;
+
+}
+.copyright p{
+    color: #fff;
+}
+
+.contact-header
+{
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.service-three{
+        display: flex;
+        flex-basis: 200px;
+        height: 200px;
+        position: relative;
+        }
+
+.service-one:hover
+{
+    transform: scale(1.1);
+  
+}
+.service-two:hover
+{
+    transform: scale(1.1);
+  
+}
+.service-three:hover
+{
+    transform: scale(1.1);
+  
+}
+.item
+{
+   
+    height: 350px;
+    background-image: linear-gradient(#5985c3, #84a6d5);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 16px;
+    color: #fff;
+}
+
+.owl-carousel
+{
+    margin: 100px 0px;
+}
+
+.contact-details h4
+{
+    font-weight: 600;
+    font-size: 20px;
+    color: #000;
+    position: relative;
+}
+
+
+.contact-details h4 i
+{
+    position: absolute;
+    margin: 3px 0px 0px -40px;
+}
+
+.owl-carousel .owl-item img 
+{
+    width: 75px !important;
+    padding-top: 15px;
+}
+.owl-carousel .owl-item p
+{
+    text-align: center;
+    padding: 0px 23px;
+}
+.owl-carousel .owl-item h3
+{
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 700;
+    font-size: 1rem;
+}
+#our-clients h2
+{
+    text-align: center;
+    padding-top: 53px;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+#our-clients h2::after {
+    content: '';
+    width: 65px;
+    height: 2px;
+    background-color: #04AA6D;
+    position: absolute;
+    left: 47%;
+    margin-top: 50px;
+}
+#contact  h2::after {
+    content: '';
+    width: 65px;
+    height: 2px;
+    background-color: #04AA6D;
+    position: absolute;
+    left: 47%;
+    margin-top: 50px;
+}
+
+
+
+@media screen and (max-width: 600px) {
+    .navbar .icon ,.overlay
+    {
+        display: block;
+        right: 0;
+        color: #fff;
+        cursor: pointer;
+        position: absolute;
+        left: 20px;
+    }
+
+    .banner img{
+        height: 80vh;
+        object-fit: cover;
+    }
+    .navbar ul{
+        display: none;
+    }
+
+    .overlay {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 9999;
+        top: 0;
+        left: 0;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0, 0.9);
+        overflow-x: hidden;
+        transition: 0.5s;
+      }
+      .overlay-content {
+        position: relative;
+        top: 25%;
+        width: 100%;
+        text-align: center;
+        margin-top: 30px;
+      }
+      .overlay a {
+        padding: 8px;
+        text-decoration: none;
+        font-size: 36px;
+        color: #818181;
+        display: block;
+        transition: 0.3s;
+      }
+      .overlay a:hover, .overlay a:focus {
+        color: #f1f1f1;
+      }
+      
+      .overlay .closebtn {
+        position: absolute;
+        top: 20px;
+        right: 45px;
+        font-size: 60px;
+      }
+      .contact-section
+      {
+        flex-wrap: wrap;
+        gap: 10px;
+      }
+      #contactform
+      {
+        flex-basis: 100%;
+      }
+  
 }
